$Id$

version ?.??.?? (????-??-??):

  - added support for radio sectors management in user interface [chilan]
  - fixed serious performance regression introduced by autoloader [chilan]
  - added radio sector management for network device links [chilan]
  - added license number and frequency for radio sectors [chilan]

version 1.11.16 (2015-03-31):

  - allow for separated template files in userpanel style [chilan]
  - print customer list from selected division is possible [chilan]
  - save also message subjects in message templates [chilan]
  - added debian package config - build can be done by dpkg-buildpackage [maniac]
  - new message types added (userpanel, userpanel urgent [chilan]
  - new database access layer [maciejlew]
  - new configuration system [maciejlew]
  - wysiwyg edition of config values is possible [chilan]
  - we can delete all customer liabilities by one click [chilan]
  - add fullnumber with dispatched document full number in documents table [chilan]
  - documentlist: selection of numberplan is possible [chilan]
  - added quick search by document full number [chilan]
  - daemon: if snmp.h is not available then don't build ewx-* modules [maniac]
  - daemon: fixed daemon start on some platforms. Closes: #239 [maniac]
  - tariffs: 500M is new maximum allowed bandwidth [chilan]
  - invoicereport: multi selection of numberplans is possible [chilan]
  - helpdesk ticket add: make form layout more similar to ticket edit form [chilan]
  - events: multi-day event support [chilan]
  - events: multi user selection is possible in event search form [chilan]
  - management urls can be also assigned to nodes [chilan]
  - LMS class is able to send many posts via single smtp session [chilan]
  - new plugins management system [maciejlew]
  - many sms service providers can be set in sms.service
    setting (separated by colon) [chilan]
  - bumped ezpdf library version (viewing invoices in firefox should
    work again) [chilan]