@@ -2924,9 +2924,12 @@ $_LANG['Azimuth:'] = 'Azymut:';
 $_LANG['Angular width:'] = 'Szerokość kątowa:';
 $_LANG['Altitude:'] = 'Wysokość:';
 $_LANG['Range:'] = 'Zasięg:';
+$_LANG['Frequency:'] = 'Częstotliwość:';
+$_LANG['Bandwidth:'] = 'Szerokość pasma:';
 $_LANG['$a deg.'] = '$a st.';
 $_LANG['$a m'] = '$a m';
 $_LANG['$a GHz'] = '$a GHz';
+$_LANG['$a MHz'] = '$a MHz';
 $_LANG['Remove radio sector'] = 'Usuń sektor radiowy';
 $_LANG['Edit radio sector'] = 'Edytuj sektor radiowy';
 $_LANG['No radio sectors.'] = 'Brak sektorów radiowych.';
@@ -2934,6 +2937,10 @@ $_LANG['Enter azimuth in degrees'] = 'Podaj azymut w stopniach';
 $_LANG['Enter angular width in degrees'] = 'Podaj szerokość kątową w stopniach';
 $_LANG['Enter altitude in meters'] = 'Podaj wysokość w metrach';
 $_LANG['Enter range in meters'] = 'Podaj zasięg w metrach';
+$_LANG['Enter radio license number'] = 'Podaj numer zezwolenia radiowego';
+$_LANG['Enter frequency in GHz'] = 'Podaj częstotliwość w GHz';
+$_LANG['Enter bandwidth in MHz'] = 'Podaj szerokość pasma w MHz';
+$_LANG['Radio license number:'] = 'Numer zezwolenia radiowego:';
 $_LANG['Add new radio sector'] = 'Dodaj nowy sektor radiowy';
 $_LANG['Radio sectors:'] = 'Sektory radiowe:';
 $_LANG['Radio sector name cannot be empty!'] = 'Nazwa sektora radiowego nie może być pusta!';
@@ -2950,14 +2957,11 @@ $_LANG['Radio sector altitude cannot be empty!'] = 'Wysokość sektora radiowego
 $_LANG['Radio sector altitude has invalid format!'] = 'Wysokość sektora radiowego zawiera niepoprawne znaki!';
 $_LANG['Radio sector range cannot be empty!'] = 'Zasięg sektora radiowego nie może być pusty!';
 $_LANG['Radio sector range has invalid format!'] = 'Zasięg sektora radiowego zawiera niepoprawne znaki!';
+$_LANG['Radio sector frequency has invalid format!'] = 'Częstotliwość sektora radiowa zawiera niepoprawne znaki!';
+$_LANG['Radio sector bandwidth has invalid format!'] = 'Szerokość pasma sektora radiowego zawiera niepoprawne znaki!';
 $_LANG['Radio sector:'] = 'Sektor radiowy:';
 $_LANG['Select radio sector'] = 'Wybierz sektor radiowy';
 $_LANG['Destination radio sector:'] = 'Docelowy sektor radiowy:';
-$_LANG['Radio license number:'] = 'Numer zezwolenia radiowego:';
-$_LANG['Enter radio license number'] = 'Podaj numer zezwolenia radiowego';
-$_LANG['Frequency:'] = 'Częstotliwość:';
-$_LANG['Enter radio frequency'] = 'Podaj częstotliwość radiową';
 $_LANG['(default for link technology)'] = '(domyślna dla technologii łącza)';
-$_LANG['Radio frequency has invalid format!'] = 'Częstotliwość radiowa zawiera niepoprawne znaki!';
 
 ?>
