@@ -7,7 +7,8 @@
 	<TD style="width: 1%;">{trans("Altitude:")}</TD>
 	<TD style="width: 1%;">{trans("Range:")}</TD>
 	<TD style="width: 1%;">{trans("Radio license number:")}</TD>
-	<TD style="width: 91%;">{trans("Link technology:")}<br>{trans("Frequency:")}</TD>
+	<TD style="width: 1%;">{trans("Link technology:")}</TD>
+	<TD style="width: 90%;">{trans("Frequency:")}<br>{trans("Bandwidth:")}</TD>
 	<TD style="width: 1%;" class="nobr text-center">{trans("Nodes:")}</TD>
 	<TD style="width: 1%;" class="nobr text-center">{trans("Net devices:")}</TD>
 	<TD style="width: 1%;">&nbsp;</TD>
